sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:3: error: not found: value getNombreValeur
  var ecart = getNombreValeur()
              ^AlgCombSort:4: error: not found: value getNombreValeur
  var length = getNombreValeur()
               ^AlgCombSort:18: error: Int does not take parameters
              echange(i,i+ecart)
                     ^